--- a/style.css
+++ b/style.css
@@ -12,7 +12,13 @@ form {
   margin: auto;
   padding: 25px;
   margin-top: calc(50vh - 150px);
-  background: #eee;
+  background: #ebebeb;
+}
+
+#additional-fields select,
+#additional-fields input {
+  max-width: 230px;
+  margin: 5px 0;
 }
 
 #additional-fields div {
