--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial;
+}
+
 #chart {
   height: 95vh;
   width: 96vw;
   margin: auto auto;
   padding: 0;
-  display: none;
 }
 
 form {
@@ -52,7 +57,6 @@ p {
 }
 
 #filter {
-  display: none;
   position: absolute;
   bottom: -47px;
   padding: 10px;
@@ -75,4 +79,8 @@ p {
 
 #filter:hover {
   bottom: 0;
+}
+
+input[type="radio"] {
+  margin-left: 15px;
 }
